Closed Bug 1342707 Opened 7 years ago Closed 7 years ago

hidden symbol `_ZN6SkOpts9Init_neonEv' isn't defined

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox51 --- unaffected
firefox52 --- fixed
firefox-esr52 --- fixed
firefox53 --- fixed
firefox54 --- fixed

People

(Reporter: glandium, Assigned: glandium)

Details

Attachments

(1 file)

When building on Debian armel, the build fails with:

gfx/skia/skia/src/core/SkOpts.cpp:213: undefined reference to `SkOpts::Init_neon()'
/usr/bin/ld: libxul.so: hidden symbol `_ZN6SkOpts9Init_neonEv' isn't defined

The reason is that neon code is entirely disabled in that case, but the initialization code in SkOpts.cpp is not ifdef'ed out at the same time.
Attachment #8841268 - Flags: review?(jmuizelaar) → review?(lsalzman)
Comment on attachment 8841268 [details]
Bug 1342707 - Don't use Init_neon if runtime detection of neon is not enabled.

https://reviewboard.mozilla.org/r/115536/#review117044
Attachment #8841268 - Flags: review?(lsalzman) → review+
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/f2388b4ac74c
Don't use Init_neon if runtime detection of neon is not enabled. r=lsalzman
Comment on attachment 8841268 [details]
Bug 1342707 - Don't use Init_neon if runtime detection of neon is not enabled.

Approval Request Comment
[Feature/Bug causing the regression]: Regression from an update to Skia in the 52 cycle
[User impact if declined]: Failure to build on Debian armel
[Is this code covered by automated tests?]: NPOTB
[Has the fix been verified in Nightly?]: NPOTB
[Needs manual test from QE? If yes, steps to reproduce]: N/A
[List of other uplifts needed for the feature/fix]: N/A
[Is the change risky?]: No
[Why is the change risky/not risky?]: It is a noop for Android arm builds.
[String changes made/needed]: N/A
Attachment #8841268 - Flags: approval-mozilla-esr52?
Attachment #8841268 - Flags: approval-mozilla-beta?
Attachment #8841268 - Flags: approval-mozilla-aurora?
Comment on attachment 8841268 [details]
Bug 1342707 - Don't use Init_neon if runtime detection of neon is not enabled.

ok let's try and get this build fix in 52 rc2
Attachment #8841268 - Flags: approval-mozilla-release+
Attachment #8841268 - Flags: approval-mozilla-esr52?
Attachment #8841268 - Flags: approval-mozilla-beta?
Attachment #8841268 - Flags: approval-mozilla-beta+
Attachment #8841268 - Flags: approval-mozilla-aurora?
Attachment #8841268 - Flags: approval-mozilla-aurora+
https://hg.mozilla.org/mozilla-central/rev/f2388b4ac74c
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Is 52 release going to be merged into esr52? (I hope the answer is yes, but who knows. ISTR having seen things landed there)
Setting qe-verify- based on Mike's assessment on manual testing needs (see Comment 4).
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.