Bug 1342707 - Don't use Init_neon if runtime detection of neon is not enabled. r=lsalzman, a=jcristau